Auth Service: Removed deprecated config + some refactor